implementação de esqueci minha senha e recebimento de e-mails na criação do remédio

--- a/src/app/components/login-register/forgot-password/forgot-password.component.html
+++ b/src/app/components/login-register/forgot-password/forgot-password.component.html
@@ -4,7 +4,7 @@
 <div class="login-box-body login-box-body-custom col-md-6">
     <p class="login-box-msg">GetMyRemedy | APP</p>
 
-    <form method="post" #formLogin="ngForm">
+    <form method="post" #formForgotPassword="ngForm">
       <div class="form-group has-feedback">
       <gmr-input-container  [showTip]="false">
         <input name="des_mail" class="form-control" placeholder="Coloque o e-mail" ngModel required minlength="4">
@@ -12,11 +12,7 @@
       </gmr-input-container>
       </div>
       <div class="form-group has-feedback">
-      <gmr-input-container [showTip]="false">
-        <input type="password" name="des_password" class="form-control" placeholder="Coloque a Senha" ngModel required minlength="6">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span><br>
 
-      </gmr-input-container>
       </div>
       <div class="row">
         <div class="col-xs-8">
@@ -28,7 +24,7 @@
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" (click)="checkLoginInformations(formLogin.value)" [disabled]="!formLogin.valid" class="btn btn-primary btn-block btn-flat">Logar</button>
+          <button type="submit" (click)="checkInformations(formForgotPassword.value);formForgotPassword.reset()" [disabled]="!formForgotPassword.valid" class="btn btn-primary btn-block btn-flat">Enviar</button>
         </div>
         <!-- /.col -->
       </div>
@@ -44,8 +40,8 @@
         Google+</a>
     </div>-->
     <!-- /.social-auth-links -->
-    <a [routerLink]="['/forgot-password']" class="text-center">Esqueci minha senha</a><br><br>
-    <a [routerLink]="['/register']" class="btn btn-primary btn-flat text-center">Cadastrar novo usuário</a>
+    <a [routerLink]="['/login']" class="text-center">Voltar</a><br><br>
+
 
     </div>
   </div>
