--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -60,33 +60,32 @@
             <div class="box-header with-border box box-primary">
                 <div class="form-group">
 
-                  <div class="col-md-4 col-xs-6" type="sbmit">
-                    <button class="btn btn-primary col-md-12 button-custom" type="submit" (click)="checkInformations(formUser.value)" [disabled]=" !formUser.valid"  name="remedyRegisterButtonSubmit">Editar</button>
+                  <div class="col-md-4 col-xs-6" type="submit">
+                    <button class="btn btn-primary col-md-12 button-custom" type="submit" (click)="checkInformations(formUser.value); formUser.reset()" [disabled]=" !formUser.valid"  name="remedyRegisterButtonSubmit">Editar</button>
                   </div>
 
                   <div class="col-md-4 ">
 
                   </div>
 
-                  <div class="col-md-4 col-xs-6" type="sbmit">
+                  <div class="col-md-4 col-xs-6" type="submit">
                     <button class="btn btn-danger col-md-12 button-custom" type="submit" [routerLink]="'[/]'" (click)="returnHome()"  name="remedyRegisterButtonSubmit">Cancelar</button>
                   </div>
                 </div>
             </div>
           </div>
 
-          <div class="col-md-12">
-              <div class="">
-                <h3 class="box-title callout callout-info col-md-12 col-xs-12">Meus Anuncios</h3>
-                <div class="col-sm-6 col-xs-12" *ngFor="let item of menu | async">
-
-                <gmr-menu-item [menuItem]="item"></gmr-menu-item>
-
-                </div>
-              </div>
-            </div>
-
         </div>
 
+          <div >
 
+                <h3 class="box-title callout callout-info col-md-12 col-xs-12">Meus Anúncios</h3>
+                <h4 class="box-title col-md-12 col-xs-12">Atenção: Anúncios com a data vencida serão automaticamente excluidos</h4>
+
+                <div class="col-sm-6 col-xs-12" *ngFor="let item of menu | async">
+
+                <gmr-menu-item class="menu-item-info-box-custom" [menuItem]="item" ></gmr-menu-item>
+
+                </div>
+            </div>
 </section>
