--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   <footer class="main-footer">
     <div class="container">
       <div class="pull-right hidden-xs col-xs-3 col-md-3">
-        <b>Version</b> 1.0.0
+        <b>Version</b> 1.1.0
       </div>
             <div class="col-xs-6 col-md-3">
             <strong>GetMyRemedy</strong>
@@ -32,8 +32,9 @@
           <div class="col-xs-6 col-md-3">
           <strong>Ajuda/Suporte</strong>
 
-          <p>felipe.sangiorge@gmail.com</p>
-          <p>Perguntas e Respostas</p>
+          <p>Perguntas e Resposta:</p>
+          <p>suporte@getmyremedy.com.br</p>
+
 
         </div>
 
