--- a/src/app/components/login-register/login-register.component.html
+++ b/src/app/components/login-register/login-register.component.html
@@ -61,7 +61,7 @@
                 <div class="form-group">
 
                   <div class="col-md-4 col-xs-6" type="sbmit">
-                    <button class="btn btn-primary col-md-12 button-custom" type="sbmit" (click)="checkInformations(formRemedy.value)" [disabled]=" !formRemedy.valid"  name="remedyRegisterButtonSubmit">Confirmar</button>
+                    <button class="btn btn-primary col-md-12 button-custom" type="sbmit" (click)="checkInformations(formRemedy.value);formRemedy.reset()" [disabled]=" !formRemedy.valid"  name="remedyRegisterButtonSubmit">Confirmar</button>
                   </div>
 
                   <div class="col-md-4 ">
