--- a/src/app/components/remedys/remedys.component.html
+++ b/src/app/components/remedys/remedys.component.html
@@ -8,18 +8,7 @@
   <div class="col-xs-4 col-md-4">
   </div>
 
-  <div class="col-xs-4 col-md-4">
-      <!--<form action="#" method="get" class="sidebar-form">
-          <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-            <span class="input-group-btn">
-                  <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                    <i class="fa fa-search"></i>
-                  </button>
-                </span>
-          </div>
-        </form>-->
-    </div>
+  <gmr-remedys-search></gmr-remedys-search>
 
 </section>
 </div>
