--- a/src/app/components/remedys/remedys-search/remedys-search.component.html
+++ b/src/app/components/remedys/remedys-search/remedys-search.component.html
@@ -1,7 +1,10 @@
 <input class="form-control" placeholder="Pesquisar..." type="text" (keyup)="searchTerms.next($event.target.value)">
 
-
-
+<div *ngIf="!hasNoResponse()">
+  <h4 >Sem registro...       <i class="fa fa-frown-o"></i></h4>
+  <h4> Lamentamos a pesquisa não retornou nenhum registro.</h4>
+</div>
+<div *ngIf="searchResults" id="custom_scroll">
 <a *ngFor="let response of searchResults | slice:0:9"  [routerLink]="['/remedys',response?.idtb_remedys_menu]">
   <div class="place-info-box">
     <span class="place-info-box-icon"><img [src]="response?.des_imagePath" /></span>
@@ -13,20 +16,7 @@
 
 
     </div>
-    <!-- /.info-box-content
-  [routerLink]="['/remedys',remedy.des_name]"
-<img [src]="remedy.imagePath" /> -->
+
   </div>
 </a>
-
-
-
-
-      <!--  <div class="input-group">
-          <input name="q" class="form-control" placeholder="Search..." type="text">
-          <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                  <i class="fa fa-search"></i>
-                </button>
-              </span>
-        </div> -->
+</div>
