--- a/src/app/components/login-register/login-register.component.html
+++ b/src/app/components/login-register/login-register.component.html
@@ -69,7 +69,7 @@
                   </div>
 
                   <div class="col-md-4 col-xs-6" type="sbmit">
-                    <button class="btn btn-danger col-md-12 button-custom" type="sbmit" [routerLink]="'[/]'"  name="remedyRegisterButtonSubmit">Cencelar</button>
+                    <button class="btn btn-danger col-md-12 button-custom" type="sbmit" [routerLink]="'[/]'"  name="remedyRegisterButtonSubmit">Cancelar</button>
                   </div>
                 </div>
             </div>
