--- a/src/app/components/remedys/remedy-details/menu/menu.component.html
+++ b/src/app/components/remedys/remedy-details/menu/menu.component.html
@@ -1,7 +1,9 @@
 
+<div id="home_custom_scroll">
 
-<div class="col-sm-6 col-xs-12" *ngFor="let item of menu | async">
+    <div class="col-sm-6 col-xs-12" *ngFor="let item of menu | async" >
 
-<gmr-menu-item [menuItem]="item"></gmr-menu-item>
+    <gmr-menu-item [menuItem]="item"></gmr-menu-item>
 
+    </div>
 </div>
