--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,12 @@ body {
   overflow:auto;
 }
 
+#home_custom_scroll {
+  width:100%;
+  height:540px;
+  overflow:auto;
+}
+
 /*
  * Component: Place Info Box
  * -------------------
