--- a/src/app/components/remedys/remedy-details/menu/menu.component.html
+++ b/src/app/components/remedys/remedy-details/menu/menu.component.html
@@ -1,4 +1,11 @@
 
+<div class="col-md-4 col-xs-12 login-box-body-custom">
+  <label>Pesquisar por cidade:</label>
+      <select #des_category name="des_category" (change)="onOptionChange($event.target.value)" class="form-control" placeholder="Coloque a categoria">
+        <option *ngFor="let elements of selectElements" [selected]="elements.Name == 'Todos'" [value]="elements.Name">{{elements.Name}}</option>
+      </select>
+</div>
+
 <div id="home_custom_scroll">
 
     <div class="col-sm-6 col-xs-12" *ngFor="let item of menu | async" >
