--- a/src/app/components/remedys/remedys.component.html
+++ b/src/app/components/remedys/remedys.component.html
@@ -1,7 +1,7 @@
 
 <div class="content content-custom">
     <section class="content-header">
-      <div class="col-xs-4 col-md-4">
+      <div class="col-xs-12 col-md-4">
         <h2>Remédios em destaque</h2>
       </div>
     </section>
@@ -15,20 +15,25 @@
           </div>
           <div class="col-md-4 col-xs-12 login-box-body-custom">
             <h4>Pesquisar por categoria:</h4>
-                <select #des_category name="des_category" (change)="onOptionChange($event.target.value)" class="form-control" placeholder="Coloque a categoria">
-                  <option *ngFor="let elements of selectElements" [selected]="elements.Name == 'Todos'" [value]="elements.Name">{{elements.Name}}</option>
+                <select #des_category name="des_category" (change)="onOptionChange($event.target.value)"
+                 class="form-control" placeholder="Coloque a categoria">
+
+                  <option *ngFor="let elements of selectElements" [selected]="elements.Name == 'Todos'"
+                  [value]="elements.Name">{{elements.Name}}</option>
+
                 </select>
           </div>
     </div>
 
-  <div class="row" id="home_custom_scroll">
+  <div [@popOverState]="show" class="row" id="home_custom_scroll">
+
     <div *ngIf="!hasNoResponse()">
       <h4 >Sem registro...       <i class="fa fa-frown-o"></i></h4>
       <h4> Lamentamos a pesquisa por categoria não retornou nenhum registro.</h4>
       <h4> Tente escolher outra categoria, ou busque por todos.</h4>
     </div>
-    <div *ngFor="let remedy of remedys " class="col-sm-6 col-xs-12">
-        <gmr-remedy [remedy]="remedy"></gmr-remedy>
+    <div  *ngFor="let remedy of remedys" class="col-sm-6 col-xs-12">
+        <gmr-remedy  [remedy]="remedy"></gmr-remedy>
     </div>
   </div>
 </section>
