--- a/src/app/components/remedys/remedy-details/menu-item/menu-item.component.html
+++ b/src/app/components/remedys/remedy-details/menu-item/menu-item.component.html
@@ -1,4 +1,4 @@
-<div class="menu-item-info-box">
+<div class="menu-item-info-box" (mouseover)="mouseOver()" (mouseleave)="mouseLeave()" [@mouseFocus]="focus">
   <span class="menu-item-info-box-icon"><img [src]="menuItem.des_imagePath"></span>
 
   <div class="menu-item-info-box-content">
