--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,19 +1,19 @@
 <section class="content-header"></section>
 
-<section class="content">
-  <div class="jumbotron welcome-jumbotron">
+<section class="content" >
+  <div class="jumbotron welcome-jumbotron" [@popOverStateOne]="show">
     <h1>Bem vindo ao GetMyRemedy!</h1>
     <p>Procura doação de remédios ? Veja Quais estão disponíveis</p>
     <a class="btn btn-primary btn-lg" [routerLink]="['/remedys']">Pesquisar</a>
   </div>
 
-  <div class="jumbotron content-jumbotron">
+  <div class="jumbotron content-jumbotron" [@popOverStateTwo]="showTwo">
     <h1>Como funciona ! <i class="fa fa-gear"></i></h1>
     <p>É bem simples, você deve procurar pelo remédio que precisa logo em cima clicando em pesquisar,</p>
     <p>ou então escolhendo o menu Remédios. Poderá filtrar por cidade, categoria, da forma que precisar,</p>
     <p>e combinar com a pessoa que está doando, sem custo e sem complicações!</p>
   </div>
-  <div class="jumbotron-custom jumbotron content-jumbotron">
+  <div class="jumbotron-custom jumbotron content-jumbotron" [@popOverStateTree]="showTree">
     <h3> Nós acreditamos em um mundo melhor! <i class="fa fa-globe"></i></h3>
     <div class=" col-xs-12 col-md-4">
       <h3> Economize dinheiro</h3>
@@ -30,4 +30,5 @@
     </div>
 
   </div>
+
 </section>
