--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* TESTE ___________________________________________________*/
+
 body {
   color: #555;
 }
@@ -29,6 +29,42 @@ body {
 .menu-item-info-box-custom{
   margin-left: -20px;
   display: -webkit-inline-box;
+}
+
+.main-titles-custom{
+  font: inherit bold 34px "Comic Sans MS";
+  font-stretch: expanded;
+  font-weight: 700;
+  font-variant: small-caps;
+}
+
+.main-subtitles-custom{
+  font-family: arial, helvetica, sans-serif;
+  font-stretch: expanded;
+  font-weight: 700;
+  font-variant: normal;
+}
+
+.background-image-custom{
+  background-image: url('./assets/img/backImages/background.jpg');
+}
+.back-to-top-custom{
+  width: 80px;
+  height: 80px;
+  font-size: 20px;
+  border-radius: 50px;
+  background-color: #3c8dbc;
+}
+.wrapper-custom {
+  color: #FFF;
+  height: 100%;
+  min-height: 100%;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
 
 #custom_scroll {
